<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">miniBrowser</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="skin_changing">Change Skin</string>
    <string name="bookmark">BookMark</string>
    <string name="hidehome">Hide Home</string>
    <string name="bigword">Big Word</string>

</resources>
