<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.wuyongjie.minibrowser.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
    <item android:id="@+id/skin_changing"
        android:orderInCategory="99"
        android:showAsAction="ifRoom"
        android:title="@string/skin_changing"/>

    <item android:id="@+id/bookmark"
        android:orderInCategory="98"
        android:showAsAction="ifRoom"
        android:title="@string/bookmark"/>
    
    <item android:id="@+id/hidehome"
        android:orderInCategory="97"
        android:showAsAction="never"
        android:title="@string/hidehome"/>
    
    <item android:id="@+id/bigword"
        android:orderInCategory="96"
        android:showAsAction="never"
        android:title="@string/bigword"/>"
</menu>
